--- a/example/mainwindow.ui
+++ b/example/mainwindow.ui
@@ -6,21 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>650</height>
+    <width>1280</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>0</y>
-      <width>1200</width>
-      <height>600</height>
+      <width>1280</width>
+      <height>780</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -92,8 +92,8 @@
      <widget class="QWidget" name="horizontalLayoutWidget_2">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>30</y>
+        <x>20</x>
+        <y>10</y>
         <width>595</width>
         <height>80</height>
        </rect>
@@ -146,8 +146,8 @@
      <widget class="QWidget" name="horizontalLayoutWidget_3">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>120</y>
+        <x>20</x>
+        <y>110</y>
         <width>595</width>
         <height>80</height>
        </rect>
@@ -200,7 +200,7 @@
      <widget class="QWidget" name="horizontalLayoutWidget_4">
       <property name="geometry">
        <rect>
-        <x>300</x>
+        <x>20</x>
         <y>210</y>
         <width>595</width>
         <height>80</height>
@@ -254,8 +254,8 @@
      <widget class="QWidget" name="horizontalLayoutWidget_5">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>300</y>
+        <x>20</x>
+        <y>310</y>
         <width>283</width>
         <height>80</height>
        </rect>
@@ -308,8 +308,8 @@
      <widget class="QTElementUI::Button" name="pushButton_28">
       <property name="geometry">
        <rect>
-        <x>480</x>
-        <y>400</y>
+        <x>230</x>
+        <y>420</y>
         <width>31</width>
         <height>28</height>
        </rect>
@@ -321,8 +321,8 @@
      <widget class="QTElementUI::Button" name="pushButton_25">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>400</y>
+        <x>20</x>
+        <y>420</y>
         <width>31</width>
         <height>28</height>
        </rect>
@@ -334,8 +334,8 @@
      <widget class="QTElementUI::Button" name="pushButton_26">
       <property name="geometry">
        <rect>
-        <x>360</x>
-        <y>400</y>
+        <x>90</x>
+        <y>420</y>
         <width>31</width>
         <height>28</height>
        </rect>
@@ -347,8 +347,8 @@
      <widget class="QTElementUI::Button" name="pushButton_27">
       <property name="geometry">
        <rect>
-        <x>420</x>
-        <y>400</y>
+        <x>160</x>
+        <y>420</y>
         <width>31</width>
         <height>28</height>
        </rect>
@@ -360,8 +360,8 @@
      <widget class="QTElementUI::Button" name="pushButton_29">
       <property name="geometry">
        <rect>
-        <x>600</x>
-        <y>400</y>
+        <x>360</x>
+        <y>420</y>
         <width>31</width>
         <height>28</height>
        </rect>
@@ -369,6 +369,114 @@
       <property name="text">
        <string/>
       </property>
+     </widget>
+     <widget class="QWidget" name="horizontalLayoutWidget_6">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>470</y>
+        <width>595</width>
+        <height>80</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_6">
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_30">
+         <property name="text">
+          <string>Link</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_31">
+         <property name="text">
+          <string>Primary</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_32">
+         <property name="text">
+          <string>Success</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_33">
+         <property name="text">
+          <string>Info</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_34">
+         <property name="text">
+          <string>Warning</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_35">
+         <property name="text">
+          <string>Danger</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="horizontalLayoutWidget_7">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>570</y>
+        <width>595</width>
+        <height>80</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_36">
+         <property name="text">
+          <string>Text</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_37">
+         <property name="text">
+          <string>Primary</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_38">
+         <property name="text">
+          <string>Success</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_39">
+         <property name="text">
+          <string>Info</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_40">
+         <property name="text">
+          <string>Warning</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTElementUI::Button" name="pushButton_41">
+         <property name="text">
+          <string>Danger</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
@@ -405,16 +513,6 @@
      </attribute>
     </widget>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1200</width>
-     <height>26</height>
-    </rect>
-   </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
