--- a/icons.qrc
+++ b/icons.qrc
@@ -294,5 +294,6 @@
         <file>resources/icons/wind-power.svg</file>
         <file>resources/icons/zoom-in.svg</file>
         <file>resources/icons/zoom-out.svg</file>
+        <file>resources/icons/qt-logo.png</file>
     </qresource>
 </RCC>
