--- a/examples/mainwindow.ui
+++ b/examples/mainwindow.ui
@@ -1072,6 +1072,32 @@
        </rect>
       </property>
      </widget>
+     <widget class="Element::Slider" name="slider_1">
+      <property name="geometry">
+       <rect>
+        <x>730</x>
+        <y>650</y>
+        <width>160</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="Element::Slider" name="slider_2">
+      <property name="geometry">
+       <rect>
+        <x>970</x>
+        <y>430</y>
+        <width>22</width>
+        <height>160</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_5">
      <attribute name="title">
@@ -2293,6 +2319,11 @@
    <extends>QWidget</extends>
    <header location="global">switch.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Element::Slider</class>
+   <extends>QSlider</extends>
+   <header location="global">slider.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
